<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="vn.hue.husc.it.tuyethanh.qlnhanvien.MainActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <TextView
        android:id="@+id/viewDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tendangnhap"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:textColor="#000000"
         />

    <EditText
        android:id="@+id/editTenDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hinttendangnhap"
        android:layout_margin="20dp"
         >
        <requestFocus/>
    </EditText>
    <EditText
        android:id="@+id/editMatKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        android:hint="@string/hintmatkhau"
         />
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnDangKyTK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleDangKy"
            android:layout_gravity="center"
            android:onClick="DangKyTK"
            />

        <Button
            android:id="@+id/btnDangNhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dongy"
            android:layout_gravity="center"
            android:onClick="DangNhap"
            />

        <Button
            android:id="@+id/btnThoatDN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoat"
            android:layout_gravity="center"
            />
    </LinearLayout>


</LinearLayout>

